# python-template-jupyter

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitignore  MANIFEST.in  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/python_template_jupyter/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/wiki/: Installation.doctree  _Footer.doctree  _Sidebar.doctree
.doctrees/docs/wiki/contribute/: Build-from-Source.doctree  Contribute.doctree  Local-Development-Setup.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  docs.yaml  publish.yml
_modules/: index.html  python_template_jupyter.html
_sources/: README.md.txt  index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/python_template_jupyter/: index.rst.txt
_sources/docs/wiki/contribute/: Contribute.md.txt  Local-Development-Setup.md.txt
autoapi/: index.html
autoapi/python_template_jupyter/: index.html
autoapi/test_all/: index.html
binder/: requirements.txt
docs/: Makefile  api.md  conf.py  make.bat
docs/wiki/: Installation.html  Installation.md  _Footer.html  _Footer.md  _Sidebar.html
docs/wiki/contribute/: Build-from-Source.html  Build-from-Source.md  Contribute.html  Local-Development-Setup.html
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  playwright.config.js  pnpm-lock.yaml  tsconfig.json  webpack.config.js
js/src/: extension.js  index.js  model.js  plugin.js  view.js  widget.js
js/src/extension/: install.json
js/tests/: index.spec.js
jupyter_template/: __init__.py
jupyter_template/tests/: test_all.py
python_template_jupyter/: __init__.py
python_template_jupyter/extension/: python_template_jupyter.json
python_template_jupyter/tests/: test_all.py
