[build-system]
requires = [
    "hatchling"
    "hatch-jupyter-builder",
    "jupyterlab>=4,<5",
]
build-backend="hatchling.build"

[project]
name = "jupyter-template"
authors = [{name = "Python Project Template Authors", email = "3105306+timkpaine@users.noreply.github.com"}]
description="A Jupyter-Python project template"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Repository = "https://github.com/python-project-templates/jupyter-template"
Homepage = "https://github.com/python-project-templates/jupyter-template"

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatch-jupyter-builder",
    "hatchling",
    "jupyter>=4,<5",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
]

[project.scripts]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "jupyter_template/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "setup.py",
]

[tool.hatch.build]
artifacts = [
    "jupyter_template/extension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyter_template",
    "/js",
    "LICENSE",
    "README.md",
]
exclude = [
    ".copier-answers.yml",
    "/.github",
    "/.gitattributes",
    "/.gitignore",
    "/js/node_modules",
]

[tool.hatch.build.targets.wheel]
include = [
    "/jupyter_template",
]
exclude = [
    ".copier-answers.yml",
    "/.github",
    "/.gitattributes",
    "/.gitignore",
    "/js/node_modules",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_template/extension" = "share/jupyter/labextensions/jupyter_template"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_template/extension/index.js",
]
skip-if-exists = [
    "jupyter_template/extension/index.js",
]
dependencies = [
    "hatch-jupyter-builder",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = "pnpm"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "jupyter_template/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyter_template"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
