[build-system]
requires = [
    "hatchling",
    "hatch-js",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "python-template-jupyter"
authors = [
    {name = "Python Project Template Authors", email = "3105306+timkpaine@users.noreply.github.com"},
]
description = "A Jupyter-Python project template"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.10"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatch-js",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "jupyterlab>=4,<5",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/python-project-templates/python-template-jupyter"
Homepage = "https://github.com/python-project-templates/python-template-jupyter"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "python_template_jupyter/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.coverage.run]
branch = true
omit = [
    "python_template_jupyter/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "python_template_jupyter/nbextension",
    "python_template_jupyter/labextension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "python_template_jupyter",
    "js",
]
exclude = [
    "js/dist",
    "js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = [
    "python_template_jupyter",
]
exclude = [
    "js"
]

[tool.hatch.build.targets.wheel.shared-data]
"python_template_jupyter/labextension" = "share/jupyter/labextensions/python-template-jupyter"
"python_template_jupyter/extension/install.json" = "share/jupyter/labextensions/python-template-jupyter/install.json"
"python_template_jupyter/extension/python_template_jupyter.json" = "etc/jupyter/jupyter_server_config.d/python_template_jupyter.json"

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = [
    "python_template_jupyter/nbextension/static/notebook.js",
    "python_template_jupyter/labextension/package.json",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "python_template_jupyter/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "python_template_jupyter",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
title = "python template jupyter"
root = "README.md"
pages = []
use-autoapi = true

